# diplom_rabotaet

./: .coverage  .env  README.md  config.py  create_admin.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  admin.py  auth.py  forms.py  models.py  routes.py
app/templates/: _messages.html  add_edit_material_receipt.html  add_edit_product.html  add_edit_specification.html  add_material_category.html  admin_users.html  base.html  create_user.html  dashboard.html  edit_material_category.html  edit_user.html  expense_list.html  login.html  material_categories.html  material_receipt_list.html  produce_product.html  product_list.html  production_journal.html  report_details_stock.html  report_list.html  specification_list.html
instance/: app.db
migrations/versions/: fd20a67f8471_initial_database_schema_for_postgresql.py
